Fix invalid collection